<resources>
    <string name="app_name">Acme Trading</string>
    <string name="miles_away">%s miles away</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register">register</string>
    <string name="retry">retry</string>
    <string name="contact">contact</string>
    <string name="review_rating">review rating</string>
    <string name="number_of_ratings">(%d)</string>
    <string name="generic_request_error_message">An error occurred check internet connectivity and try again</string>
</resources>